--- a/functions/from-residentadvisor/requirements.txt
+++ b/functions/from-residentadvisor/requirements.txt
@@ -1,20 +1,29 @@
-awscli==1.15.76
+awscli==1.16.116
+backports.functools-lru-cache==1.5
 beautifulsoup4==4.5.3
 boto3==1.9.91
-botocore==1.12.91
+botocore==1.12.106
+certifi==2018.11.29
+chardet==3.0.4
 colorama==0.3.9
 cssselect==1.0.1
 docutils==0.14
 futures==3.2.0
+idna==2.8
 jmespath==0.9.3
 lxml==4.3.1
+packaging==19.0
+pip-review==1.0
 protobuf==3.6.1
 pyasn1==0.4.4
+pycodestyle==2.5.0
+pyparsing==2.3.1
 python-dateutil==2.7.3
 PyYAML==3.13
+requests==2.21.0
 rsa==3.4.2
 s3transfer==0.2.0
 six==1.11.0
+soupsieve==1.8
 urllib3==1.24.1
 virtualenv==16.4.1
-requests==2.21.0
