--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "residentify",
+  "name": "Resident Archive",
   "description": "RA tracks to Spotify",
   "memory": 128,
   "timeout": 60,
-  "role": "arn:aws:iam::705440408593:role/apex_lambda_function",
+  "role": "arn:aws:iam::<account_id>:role/apex_lambda_function",
   "environment": {}
 }
